feat: add sidebar

--- a/apps/guide/src/pages/index.mdx
+++ b/apps/guide/src/pages/index.mdx
@@ -1,25 +1,10 @@
 ---
 layout: '../layouts/SidebarLayout.astro'
 title: Introduction
-description: Description Test
+description: Test
+category: Getting Started
 ---
 
 ## 1
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tristique ante et turpis semper, et rutrum tellus faucibus. Donec varius fringilla ex in dictum. Quisque vestibulum neque leo, id mollis purus auctor non. Aenean mi risus, lobortis non aliquam vel, facilisis non augue. Praesent id magna neque. Sed aliquam ex vitae nulla tempor, eget feugiat est pellentesque. Nulla a fermentum orci. Vestibulum congue, dui ac posuere fermentum, purus enim fringilla augue, sit amet mollis erat mi non purus. Nunc at orci lacus. Nullam id quam eu mi consectetur posuere dictum quis justo. Sed at sapien id sem cursus elementum. Suspendisse ac consectetur ante.
-
-## 2
-
-Phasellus luctus, orci sit amet dapibus maximus, purus orci tristique neque, eu pellentesque ex enim ac mi. Fusce imperdiet tellus velit, ac ullamcorper ligula tempus nec. Sed tincidunt rutrum purus, ac lacinia urna finibus sed. Morbi vel feugiat nunc. Nam pulvinar egestas libero vulputate consequat. Nulla ultrices ex tellus, et laoreet nunc consequat at. Nulla id urna porttitor, gravida tortor nec, lobortis nibh. Sed rutrum ex id ante bibendum, eu interdum velit auctor. Aliquam dictum, felis a porta congue, dui diam auctor ligula, id malesuada quam neque et orci. In eget aliquam nisi, sit amet mattis nunc. Suspendisse gravida nisl sed arcu malesuada aliquet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam efficitur malesuada efficitur. Sed vehicula convallis ipsum, vitae placerat enim condimentum elementum. In vulputate ex sit amet viverra fermentum.
-
-# 3
-
-Proin nisl ligula, vulputate eget nisl id, dignissim vestibulum magna. Phasellus quis enim est. Maecenas mattis libero purus, a faucibus neque aliquam eu. Suspendisse ultrices dapibus finibus. Donec posuere facilisis maximus. Donec est nulla, feugiat et nisi sit amet, finibus rutrum sem. Vestibulum quis sem diam. Proin sed nulla sit amet nunc ultrices efficitur quis sit amet nisl. Nunc libero ex, maximus vitae nisl non, pellentesque sollicitudin nunc. In hac habitasse platea dictumst. Nunc sem dui, aliquet in imperdiet non, sodales ac magna. Maecenas quis viverra nisi. Etiam vitae finibus ligula. Suspendisse ultricies suscipit risus, sit amet fringilla urna volutpat a. Proin laoreet justo at imperdiet consequat.
-
-# 4
-
-Nam convallis ac tortor nec vehicula. Aenean pretium nunc non sollicitudin tempus. Aliquam rhoncus convallis urna, non pellentesque nisl bibendum ac. Duis sagittis gravida scelerisque. Nam lobortis leo eros. Nullam sit amet sapien orci. Vivamus ac pharetra dui. Cras auctor mollis sapien interdum accumsan. Integer vel ligula facilisis, sollicitudin lectus non, dignissim sapien. Suspendisse potenti. Nullam facilisis in velit id eleifend. Maecenas quis ex sit amet dui semper ultrices.
-
-# 5
-
-Donec condimentum luctus condimentum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur sed consequat magna. Fusce aliquet felis dui, placerat sollicitudin nunc tincidunt sed. Vivamus posuere elit non dui dictum semper. Aenean pellentesque luctus ligula in ornare. Maecenas et felis iaculis, imperdiet ligula id, tristique velit. Curabitur id dui metus. Praesent sed pretium turpis, quis eleifend magna. Ut neque urna, faucibus id ante et, mattis faucibus nibh. Maecenas facilisis blandit arcu quis tincidunt. Nullam sapien est, ultrices nec tellus a, euismod sagittis velit. Integer viverra velit at quam ullamcorper, vel faucibus libero lacinia.
