feat(guide): add search menu

--- a/apps/guide/src/pages/test.mdx
+++ b/apps/guide/src/pages/test.mdx
@@ -41,14 +41,12 @@ pnpm add darkcord
     <DiscordMessage
     	interaction={{
     		author: {
-    			avatar:
-    				'https://cdn.discordapp.com/guilds/222078108977594368/users/81440962496172032/avatars/c059c5d04d717ea05790f7a6447e4843.webp?size=160',
-    			username: 'Crawl',
+    				bot: false
     		},
     		command: 'ping',
     	}}
     	author={{
-      bot: false
+      bot: true
     	}}
     >
     	Pong!
