refactor: extract methods on discord messages

--- a/apps/guide/src/pages/test.mdx
+++ b/apps/guide/src/pages/test.mdx
@@ -71,7 +71,8 @@ client.connect();
 		}}
 		author={{
 			bot: true,
-			username: 'Darkcord Bot',
+			avatar: 'https://media.discordapp.net/attachments/1057411936045760543/1070948539246596127/35033f92a1c80a1e9bda6ce0c935b222.webp?size=160',
+			username: 'Zohy',
 		}}
 	>
 		Pong!
