fix: markdown page

--- a/apps/guide/src/pages/test.mdx
+++ b/apps/guide/src/pages/test.mdx
@@ -82,7 +82,8 @@ client.connect();
     	reply={{
     		author: {
     			bot: true,
-    			username: 'Darkcord Bot',
+    		avatar: 'https://media.discordapp.net/attachments/1057411936045760543/1070948539246596127/35033f92a1c80a1e9bda6ce0c935b222.webp?size=160',
+    		username: 'Zohy',
     		},
     		content: 'Pong!',
     	}}
