fix imports again

--- a/apps/guide/src/pages/test.mdx
+++ b/apps/guide/src/pages/test.mdx
@@ -6,7 +6,7 @@ category: Test
 ---
 
 import { CH } from '@code-hike/mdx/components';
-import { DiscordMessage, DiscordMessages } from '../ui/components';
+import { DiscordMessage, DiscordMessages } from '../ui';
 
 ## Test Shell Block
 
