add folder again

--- a/apps/guide/src/pages/test.mdx
+++ b/apps/guide/src/pages/test.mdx
@@ -6,8 +6,8 @@ category: Test
 ---
 
 import { CH } from '@code-hike/mdx/components';
-import { DiscordMessages } from '../ui/components/Discord/Messages';
-import { DiscordMessage } from '../ui/components/Discord/Message';
+import { DiscordMessages } from '../ui';
+import { DiscordMessage } from '../ui';
 
 ## Test Shell Block
 
