--- a/apps/guide/src/pages/index.mdx
+++ b/apps/guide/src/pages/index.mdx
@@ -5,6 +5,35 @@ description: Test
 category: Getting Started
 ---
 
-## 1
+## Requirements
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tristique ante et turpis semper, et rutrum tellus faucibus. Donec varius fringilla ex in dictum. Quisque vestibulum neque leo, id mollis purus auctor non. Aenean mi risus, lobortis non aliquam vel, facilisis non augue. Praesent id magna neque. Sed aliquam ex vitae nulla tempor, eget feugiat est pellentesque. Nulla a fermentum orci. Vestibulum congue, dui ac posuere fermentum, purus enim fringilla augue, sit amet mollis erat mi non purus. Nunc at orci lacus. Nullam id quam eu mi consectetur posuere dictum quis justo. Sed at sapien id sem cursus elementum. Suspendisse ac consectetur ante.
+- [NodeJS 16.9.0+](https://nodejs.org/en/download/)
+
+## Requirements for WebSocket
+
+- [Darkcord Zlib](https://www.npmjs.com/package/@darkcord/zlib) or [Zlib Sync](https://www.npmjs.com/package/zlib-sync)
+
+## Installation
+Create a directory for your project, and change to that directory in your command line.
+
+<CH.Code client:load>
+
+```shellscript npm
+npm install darkcord
+```
+
+```shellscript yarn
+yarn add darkcord
+```
+
+```shellscript pnpm
+pnpm add darkcord
+```
+
+</CH.Code>
+
+### Optional Packages
+ - `bufferutil` - WebSockets buffer utility (faster)
+ - `darkcord/zlib` - Compression package (faster)
+ - `zlib-sync` - Compression package (faster than `darkcord/zlib`)
+ - `erlpack` - Erlang term format encoder/decoder (faster)
