--- a/apps/guide/src/pages/index.mdx
+++ b/apps/guide/src/pages/index.mdx
@@ -5,6 +5,8 @@ description: Test
 category: Getting Started
 ---
 
+import { CH } from '@code-hike/mdx/components';
+
 ## Requirements
 
 - [NodeJS 16.9.0+](https://nodejs.org/en/download/)
