--- a/apps/guide/src/pages/index.mdx
+++ b/apps/guide/src/pages/index.mdx
@@ -51,6 +51,8 @@ pnpm add darkcord
 
 ## Ping Pong Example
 
+<CH.Code client:load>
+
 ```js index.js 6:10
 import { Client, Constants } from 'darkcord';
 
