--- a/apps/guide/src/pages/index.mdx
+++ b/apps/guide/src/pages/index.mdx
@@ -6,6 +6,7 @@ category: Getting Started
 ---
 
 import { CH } from '@code-hike/mdx/components';
+import { Warning } from "../ui";
 
 ## Requirements
 
@@ -50,6 +51,8 @@ pnpm add darkcord
 5. Copy the token shown on the application page
 
 ## Ping Pong Example
+
+<Warning>To use WebSocket see #requirements-for-websocket</Warning>
 
 <CH.Code client:load>
 
