--- a/apps/guide/src/pages/index.mdx
+++ b/apps/guide/src/pages/index.mdx
@@ -1,10 +1,86 @@
 ---
 layout: '../layouts/SidebarLayout.astro'
 title: Introduction
-description: Test
+description: Get started using darkcord!
 category: Getting Started
 ---
 
-## 1
+import { CH } from '@code-hike/mdx/components';
+import { Warning } from "../ui";
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tristique ante et turpis semper, et rutrum tellus faucibus. Donec varius fringilla ex in dictum. Quisque vestibulum neque leo, id mollis purus auctor non. Aenean mi risus, lobortis non aliquam vel, facilisis non augue. Praesent id magna neque. Sed aliquam ex vitae nulla tempor, eget feugiat est pellentesque. Nulla a fermentum orci. Vestibulum congue, dui ac posuere fermentum, purus enim fringilla augue, sit amet mollis erat mi non purus. Nunc at orci lacus. Nullam id quam eu mi consectetur posuere dictum quis justo. Sed at sapien id sem cursus elementum. Suspendisse ac consectetur ante.
+## Requirements
+
+- [NodeJS 16.9.0+](https://nodejs.org/en/download/)
+
+## Requirements for WebSocket
+
+- [Darkcord Zlib](https://www.npmjs.com/package/@darkcord/zlib) or [Zlib Sync](https://www.npmjs.com/package/zlib-sync)
+
+## Installation
+Create a directory for your project, and change to that directory in your command line.
+
+<CH.Code client:load>
+
+```shellscript npm
+npm install darkcord
+```
+
+```shellscript yarn
+yarn add darkcord
+```
+
+```shellscript pnpm
+pnpm add darkcord
+```
+
+</CH.Code>
+
+### Optional Packages
+ - `bufferutil` - WebSockets buffer utility (faster)
+ - `darkcord/zlib` - Compression package (faster)
+ - `zlib-sync` - Compression package (faster than `darkcord/zlib`)
+ - `erlpack` - Erlang term format encoder/decoder (faster)
+
+
+## Get Discord Bot token
+
+1. [Login to Discord in Browser](https://discord.com/)
+2. [Open Discord Developer Portal](https://discord.com/developers/applications)
+3. Create an applications
+4. Create Bot user for application
+5. Copy the token shown on the application page
+
+## Ping Pong Example
+
+<Warning>To use WebSocket see #requirements-for-websocket</Warning>
+
+<CH.Code client:load>
+
+```js index.js 6:10
+import { Client, Constants } from 'darkcord';
+
+const GatewayIntentBits = Constants.GatewayIntentBits;
+const ClientIntents = [GatewayIntentBits.Guilds, GatewayIntentBits.GuildMessage, GatewayIntentBits.MessageContent];
+
+// Create darkcord client instance
+const client = new Client('BOT_TOKEN', {
+	gateway: {
+		intents: ClientIntents,
+	},
+});
+
+client.once('ready', () => {
+	console.log(`Connected to Discord Gateway`);
+});
+
+client.on('interactionCreate', async (interaction) => {
+	if (interaction.isCommand() && interaction.commandName === "ping") {
+		await interaction.reply({ content: 'Pong!' });
+	}
+});
+
+// Connect to Discord Gateway
+client.connect();
+```
+
+</CH.Code>
